--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://hecarrillo.github.io/research_website",
-  "name": "navbar-dropdown-v1",
+  "name": "research_website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
