--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hecarrillo.github.io/research_website",
+  "homepage": "https://hecarrillo.github.io/research_website/",
   "name": "research_website",
   "version": "0.1.0",
   "private": true,
